# DSV

./: .gitignore  CMakeLists.txt  readme.md
.git-cleanCppProject/: config  index  packed-refs
.git-cleanCppProject/logs/refs/remotes/origin/: HEAD
.git-cleanCppProject/objects/pack/: pack-152b28861ba3793d1fc477e89d2e5093b9d6d803.idx  pack-152b28861ba3793d1fc477e89d2e5093b9d6d803.pack
.git-cleanCppProject/refs/heads/: master
doc/: directoryStructure.md  start_working.md
doc/doxygen/: customdoxygen.css
packaging/: CMakeLists.txt  DSV.desktop  DSV.icon.in.rc  DS_Store.scpt
source/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
